styling clean up

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -13,6 +13,8 @@
     }
 
     body {
-        @apply font-sans bg-black
+        @apply bg-gray-900;
+        font-family: 'Arial',open sans,sans-serif;
+        font-size: 15px;
     }
 }
